--- a/CatNap/CSS/index.css
+++ b/CatNap/CSS/index.css
@@ -6,7 +6,7 @@
     display: grid;
     min-height: 100vh;
     grid-template-columns: 4fr 2fr;
-    grid-template-rows: 120px 8fr 120px;
+    grid-template-rows: 120px 100% 120px;
 }
 
 
@@ -20,6 +20,7 @@ header {
     background-color: bisque;
     position: sticky;
     top: 0;
+    z-index: 2;
 }
 
 #logo {
@@ -56,23 +57,29 @@ header {
     border-radius: 25px;
 }
 
-#buscador {
+#formulario {
     display: flex;
 }
 
-#buscador input {
+#inputBuscar {
     height: 5vh;
     width: 25vw;
     border-radius: 20px 0 0 20px;
+    padding-left: 1vw;
     border: none;
 }
 
-#buscador .buscar {
+#botonBuscar {
+    height: 5vh;
     border-radius: 0 20px 20px 0;
     border: none;
     margin-right: 10%;
 }
 
+#botonBuscar:hover{
+    cursor: pointer;
+    background-color: aqua;
+}
 
 /*Cuerpo*/
 
@@ -82,9 +89,9 @@ header {
 }
 
 #publicaciones {
+    margin-top: -10vh;
     display: flex;
     background-color: blueviolet;
-    min-height: 103%;
     height: auto;
     justify-content: center;
     flex-wrap: wrap;
@@ -100,26 +107,33 @@ header {
     border: solid black;
     width: 30vw;
     height: auto;
-    max-height: 70ch;
+    max-height: 60vh;
+    max-width: 40vw;
     margin: 3%;
 }
-
 
 .cuerpoPubli {
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
 }
 
-.cuerpoPubli img{
-    max-width: 50%;
-    justify-self: center;
+.imagenPubli img{
+    max-width: 100%; /* Ajusta la imagen al ancho máximo del div */
+    max-height: 60vh;
+    height: auto;    /* Mantiene la proporción de aspecto */
+    display: block;  /* Elimina el espacio extra debajo de la imagen */
+}
+
+.imagenPubli {
+    max-height: 50%;
 }
 
 .publiHeader img {
     height: 40px;
     width: 40px;
-    border-radius: 50px;
+    border-radius: 50vh;
 }
 
 .publiHeader {
@@ -135,6 +149,42 @@ header {
 .user {
     display: flex;
     align-items: center;
+}
+
+
+/*Filtro*/
+
+#filtro {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 33vw;
+}
+
+#menus {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-left: 2vw;
+    height: 30vh;
+}
+
+#filtro a {
+    display: flex;
+    height: 5vh;
+    width: 15vw;
+    border-radius: 50px;
+    align-items: center;
+    padding-left: 2vw;
+    text-decoration: dashed;
+    color: white;
+}
+
+#filtro a:hover {
+    background-color: grey;
 }
 
 
