--- a/CatNap/CSS/index.css
+++ b/CatNap/CSS/index.css
@@ -5,7 +5,7 @@
 #cuerpo {
     display: grid;
     min-height: 100vh;
-    grid-template-columns: 4fr 2fr;
+    grid-template-columns: 6fr 2fr;
     grid-template-rows: 120px 100% 120px;
 }
 
@@ -16,8 +16,8 @@ header {
     display: flex;
     justify-content: space-between;
     grid-column-start: 1;
-    grid-column-end: 6;
-    background-color: bisque;
+    grid-column-end: 8;
+    background-color: #025159;
     position: sticky;
     top: 0;
     z-index: 2;
@@ -27,7 +27,6 @@ header {
     display: flex;
     justify-content: center;
     width: 50%;
-    border: solid black;
 }
 
 #logo img {
@@ -40,7 +39,6 @@ header {
     width: 50%;
     justify-content: end;
     align-items: center;
-    border: solid black;
 }
 
 #logIn {
@@ -48,13 +46,28 @@ header {
     width: 15vw;
     justify-content: space-around;
     align-items: center;
-    border: solid black;
 }
+
+#logIn a {
+    color: white;
+    text-decoration: none;
+    padding: 2%;
+}
+
+#logIn a:hover {
+    background-color: grey;
+    border-radius: 25px;
+}
+
 
 #logIn a img {
     height: 5vh;
-    width: auto;
+    width: 5vh;
     border-radius: 25px;
+}
+
+#logIn a:last-child:hover {
+    background-color: #025159;
 }
 
 #formulario {
@@ -84,14 +97,14 @@ header {
 /*Cuerpo*/
 
 #filtro {
-    background-color: blue;
+    background-color: #3F858C;
     height: 103%;
 }
 
 #publicaciones {
     margin-top: -10vh;
     display: flex;
-    background-color: blueviolet;
+    background-color: #7AB8BF;
     height: auto;
     justify-content: center;
     flex-wrap: wrap;
@@ -104,12 +117,14 @@ header {
 .publicacion {
     display: grid;
     grid-template-rows: 50px 40px 4fr;
-    border: solid black;
+    background-color: #C4EEF2;
+    border-radius: 25px;
+    padding: 1%;
     width: 30vw;
     height: auto;
     max-height: 60vh;
     max-width: 40vw;
-    margin: 3%;
+    margin: 1%;
 }
 
 .cuerpoPubli {
@@ -120,10 +135,10 @@ header {
 }
 
 .imagenPubli img{
-    max-width: 100%; /* Ajusta la imagen al ancho máximo del div */
+    max-width: 100%;
     max-height: 60vh;
-    height: auto;    /* Mantiene la proporción de aspecto */
-    display: block;  /* Elimina el espacio extra debajo de la imagen */
+    height: auto;
+    display: block;
 }
 
 .imagenPubli {
@@ -139,6 +154,14 @@ header {
 .publiHeader {
     display: flex;
     justify-content: space-between;
+}
+
+.publiHeader i:hover:first-child {
+    color: orange;
+}
+
+.publiHeader i:hover:last-child {
+    color: red;
 }
 
 .likes {
@@ -161,7 +184,7 @@ header {
     position: fixed;
     top: 0;
     right: 0;
-    width: 33vw;
+    width: 25vw;
 }
 
 #menus {
@@ -191,7 +214,11 @@ header {
 /*Footer*/
 
 footer {
-    background-color: aqua;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: #025159;
     grid-column-start: 1;
     grid-column-end: 6;
     position: fixed;
@@ -200,4 +227,100 @@ footer {
     right: 0;
     left: 0;
 
+}
+
+
+/*Register*/
+
+#logInParentDiv {
+    display: grid;
+    min-height: 100vh;
+    grid-template-columns: 1fr;
+    grid-template-rows: 120px 100% 120px;
+}
+
+#logInSection {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #3F858C;
+    position: fixed;
+    width: 100%;
+}
+
+#logInDiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: fit-content;
+    width: fit-content;
+    padding: 2%;
+    border-radius: 25px;
+    background-color: #025159;
+    flex-direction: column;
+    color: white;
+}
+
+#logInDiv a{
+    color: #7AB8BF;
+}
+
+#logInDiv a:hover{
+    color: #3F858C;
+}
+
+#logInDiv form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#logInDiv form input{
+    width: 300px;
+    height: 50px;
+    border-radius: 15px;
+    margin: 2%;
+    border: none;
+    padding-left: 3%;
+}
+
+/*Log In*/
+
+#registerDiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: fit-content;
+    width: fit-content;
+    padding: 2%;
+    border-radius: 10%;
+    background-color: #025159;
+    flex-direction: column;
+    color: white;
+}
+
+#registerDiv a{
+    color: #7AB8BF;
+}
+
+#registerDiv a:hover{
+    color: #3F858C;
+}
+
+#registerDiv form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#registerDiv form input{
+    width: 300px;
+    height: 50px;
+    border-radius: 15px;
+    margin: 2%;
+    border: none;
+    padding-left: 3%;
 }
